2015-11-10 S. Thiell <sthiell@stanford.edu>

	* Version 1.7 released.

2015-11-01 S. Thiell <sthiell@stanford.edu>

	* Clush.py: added -P/--progress to force display of the live progress
	indicator and display global write bandwidth when writing standard input.

2015-10-25 S. Thiell <sthiell@stanford.edu>

	* Clush.py: added --option/-O clush.conf settings override (pull
	request #248).

2015-10-18 S. Thiell <sthiell@stanford.edu>

	* Clush.py: added --hostfile command line option to specify a file
	containing single hosts, node sets or node groups (ticket #235).

2015-10-16 S. Thiell <sthiell@stanford.edu>

	* NodeSet.py: enhancing parser to recognize nodesets with brackets having
	leading/trailing digits like in "prod-00[01-99]" (ticket #228).

2015-08-29 S. Thiell <sthiell@stanford.edu>

	* CLI/Nodeset.py: added --axis option to choose nD fold axis (ticket
	#269).
	* NodeSet.py: added fold_axis public member to NodeSetBase along with
	expand algorithm when casting to string to choose nD fold axis (ticket
	#269).

2015-08-28 S. Thiell <sthiell@stanford.edu>

	* CLI/Config.py: better per-user clush.conf support. clush now also checks
	for $XDG_CONFIG_HOME/clustershell/clush.conf and
	$HOME/.local/etc/clustershell/clush.conf (ticket #111).

2015-08-27 S. Thiell <sthiell@stanford.edu>

	* CLI/Nodeset.py: add --list-all / -L to list groups from all group
	sources (ticket #266). If repeated, it has the same behavior than -l.

	* NodeUtils.py: add support for built-in groups definition files based on
	YAML. Added autodir configuration option in groups.conf to declare a
	directory where .yaml files are automatically loaded. Example available in
	groups.d/cluster.yaml.example. Added support for groups.conf section with
	multiple source names separated by comma. This is also the case for
	groups.conf.d/*.conf extensions. Also added new upcall command $SOURCE
	variable that is replaced by calling source name before execution.