@@ -1,3 +1,8 @@
+2015-11-30 S. Thiell <sthiell@stanford.edu>
+
+	* CLI/Nodeset.py: fix --output-format / -O when folding (-f) by applying
+	the provided format to each node (ticket #277).
+
 2015-11-10 S. Thiell <sthiell@stanford.edu>
 
 	* Version 1.7 released.
